src/snapshots/bridgelang__syntax__test__parses_complex_input.snap
---
source: src/syntax.rs
expression: module
---
span: "[span]"
declarations:
  - Function:
      span: "[span]"
      name:
        span: "[span]"
        symbol: foo
      parameters:
        - - span: "[span]"
            symbol: x
          - span: "[span]"
            name: i32
        - - span: "[span]"
            symbol: y
          - span: "[span]"
            name: u32
      return_type:
        span: "[span]"
        name: u32
      body:
        span: "[span]"
        statements:
          - Let:
              name: x
              type_specifier:
                span: "[span]"
                name: i32
              value:
                Literal:
                  Integer: 10
          - Let:
              name: y
              type_specifier: ~
              value:
                Literal:
                  Integer: 20
          - Expression:
              If:
                condition:
                  Identifier: food
                then_branch:
                  span: "[span]"
                  statements:
                    - Expression:
                        Literal:
                          Integer: 30
                else_branch: ~
          - Expression:
              FunctionCall:
                name: ls
                arguments:
                  - Literal:
                      Integer: 1
          - Expression:
              FunctionCall:
                name: bye
                arguments: []

